src/assets/index.css
:root {
  --shadow: 0px 4px 8px rgba(32,33,36,0.50);
  --white: #E8EAED;
  --whiteTransparent: rgba(255,255,255,0.12);
  --lightGray: #9AA0A6;
  --gray: #55557A;
  --black: #202124;
}

@font-face {
  font-family: 'InconsolataExpandedSemiBold';
  src: url('./fonts/Inconsolata_Expanded-SemiBold.ttf') format('truetype');
}

@font-face {
  font-family: 'InconsolataSemiExpandedLight';
  src: url('./fonts/Inconsolata_SemiExpanded-Light.ttf') format('truetype');
}

@font-face {
  font-family: 'GaramondSemiBold';
  src: url('./fonts/CormorantGaramond-SemiBold.ttf') format('truetype');
}

@font-face {
  font-family: 'GaramondBold';
  src: url('./fonts/CormorantGaramond-Bold.ttf') format('truetype');
}

* {
  box-sizing: border-box;
}

body {
  margin: 0;
  font-family: 'InconsolataSemiExpandedLight', sans-serif;
  font-size: 14px;
  text-align: center;
  line-height: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: var(--white);
  background-color: var(--black);
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

a, a:visited, a:hover {
  width: auto;
  text-decoration: none;
  color: var(--white);
}

h1 {
  font-family: 'GaramondSemiBold', serif;
  letter-spacing: -0.5px;
  font-size: 42px;
  line-height: 42px;
  margin-bottom: 12px;
}

h1.alt {
  color: var(--lightGray);
  font-size: 20px;
}

h2 {
  font-family: 'GaramondSemiBold', serif;
  letter-spacing: -0.5px;
  font-size: 23px;
  letter-spacing: -0.25px;
  margin: 0;
}

p {
  font-size: 14px;
  line-height: 22px;
  color: var(--lightGray);
  text-align: left;
}

p.alt {
  font-family: 'InconsolataExpandedSemiBold', sans-serif;
  font-size: 10px;
  line-height: 20px;
  letter-spacing: 1.3px;
  text-transform: uppercase;
  text-align: center;
}

ul {
  list-style: none;
  text-align: left;
  padding: 0;
  margin: 0;
}

li {
  margin-bottom: 10px;
}

li > i {
  color: var(--lightGray);
}

p.opaque {
  display: inline;
  opacity: 0.5
}

.title {
  margin: 20px 0 0;
}

.subtitle {
  width: 180px;
  margin: 0 auto;
  display: flex;
  align-items: center;
  justify-content: center;
}

.subtitle p {
  padding-right: 12px;
  padding-left: 12px;
  white-space: nowrap;
}

hr {
  border: 0;
  border-top: 1px solid var(--whiteTransparent);
  width: 100%;
}

label {
  background-color: var(--whiteTransparent);
  color: var(--black);
  font-size: 10px;
  padding: 4px;
  border-radius: 15px;
}

.content-container {
  padding: 20px 20px 30px;
  border-radius: 8px;
  background-color: var(--black);
  box-shadow: var(--shadow);
}

.list-container {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  margin-bottom: -20px;
}

